SigmaCodebackup3rdSep/objects/Sigma_Queue__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Before</fullName>
                </value>
                <value>
                    <fullName>After</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Main_date__c</fullName>
        <formula>Reminder_Date__c  -  Reminder_value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reminder_Date__c</fullName>
        <label>Reminder Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reminder_Interval__c</fullName>
        <label>Reminder Interval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Days</fullName>
                    <default>true</default>
                    <label>Days</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reminder_Queue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reminder Queue</label>
        <referenceTo>Reminder_Queue__c</referenceTo>
        <relationshipLabel>Sigma Queue</relationshipLabel>
        <relationshipName>Sigma_Queue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reminder_value__c</fullName>
        <label>Reminder Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>SO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sigma Queue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Reminder_Queue__c</columns>
        <columns>Type__c</columns>
        <columns>Reminder_Date__c</columns>
        <columns>Reminder_value__c</columns>
        <columns>Reminder_Interval__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SQ-{0000}</displayFormat>
        <label>Sigma Queue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sigma Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>